[project]
name = "adoc-link-checker"
version = "0.2.0"
description = "Outil pour vérifier les liens brisés dans les fichiers AsciiDoc."
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.30.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-responses",
    "responses",
    "coverage",
]

[project.scripts]
adocx = "adoc_link_checker.cli.main:cli"

